--- a/dong/board.html
+++ b/dong/board.html
@@ -5,8 +5,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>게시판</title>
-		<link rel="stylesheet" href="board.css">
-		<link rel="stylesheet" href="header.css">
+		<link rel="stylesheet" href="css/board.css">
+		<link rel="stylesheet" href="css/header.css">
 	</head>
 	
 	<body>
