--- a/dong/detail.html
+++ b/dong/detail.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시글 상세</title>
-    <link rel="stylesheet" href="board.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="css/board.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <!-- 헤더 영역 -->
     <header class="header">
         <div class="container">
             <div class="header-inner">
-
                 <!-- 왼쪽: 로고 -->
                 <div class="logo-box">
                     <a href="/Mypage/Mypage.html" class="logo">Init.</a>
@@ -32,7 +31,6 @@
                     <button class="alarm-button">🔔</button>
                     <button class="logout-button">👤</button>
                 </div>
-
             </div>
         </div>
     </header>
