커뮤니티 연결 및 디자인 수정.

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -58,10 +58,12 @@
         <span>공고 캘린더</span>
       </div>
     </a>
-    <div class="menu-item">
-      <div class="emoji">💬</div>
-      <span>커뮤니티</span>
-    </div>
+    <a class="menu-item" href="/dong/board.html">
+      <div>
+        <div class="emoji">💬</div>
+        <span>커뮤니티</span>
+      </div>
+    </a>
   </div>
 
   <!-- 여기 main div안에다가 메인 화면에 들어갈 내용들 추가 -->
