--- a/dong/board.html
+++ b/dong/board.html
@@ -7,6 +7,7 @@
 		<title>게시판</title>
 		<link rel="stylesheet" href="css/board.css">
 		<link rel="stylesheet" href="css/header.css">
+		<!-- <link rel="stylesheet" href="/Mypage/style.css"> -->
 	</head>
 	
 	<body>
@@ -26,7 +27,7 @@
 						<a href="/Resume/resume.html" class="nav-item">이력서</a>
 						<a href="/junyoung/101010 copy.html" class="nav-item">자기소개서</a>
 						<a href="/calendar/calendar.html" class="nav-item">공고 캘린더</a>
-						<a href="/community" class="nav-item">커뮤니티</a>
+						<a href="/dong/board.html" class="nav-item">커뮤니티</a>
 					</nav>
 
 					<!-- 오른쪽: 알림/유저 -->
