--- a/MypageMain/Mypage_main.html
+++ b/MypageMain/Mypage_main.html
@@ -32,7 +32,7 @@
                     <a href="/Resume/resume.html" class="nav-item">이력서</a>
                     <a href="/junyoung/101010 copy.html" class="nav-item">자기소개서</a>
                     <a href="/calendar/calendar.html" class="nav-item">공고 캘린더</a>
-                    <a href="/community" class="nav-item">커뮤니티</a>
+                    <a href="/dong/board.html" class="nav-item">커뮤니티</a>
                 </nav>
 
                 <!-- 오른쪽: 알림/유저 -->
