--- a/Login/4.Contact/contact_main.html
+++ b/Login/4.Contact/contact_main.html
@@ -1,93 +1,74 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-  <link rel="stylesheet" href="contact.css">
-  <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
-  <link href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
+    <link rel="stylesheet" href="contact_style.css">
 </head>
 
 <body>
-  <nav>
-		<h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
-		<ul>
-			<li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
-			<li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
-			<li><a href="/Login/2. 로그인_회원가입 화면/login_join_main.html">LOGIN</a></li>
-		</ul>
-	</nav>
-  <div class="contact-title">
-    <h3>Contact</h3>
-  </div>
-
-  <div class="left-container">
-    <p>소통은 언제나 환영입니다</p>
-    
-  </div>
-  <div class="form-container">
-    <form action="/contact/submit" method="post">
-
-
-      <dl>
-        <div class="form-row">
-          <dt>
-            <label for="wr_name">
-              이름 <span class="required_text">*</span>
-            </label>
-          </dt>
-          <dd>
-            <input type="text" id="wr_name" name="wr_name" placeholder="이름을 입력하세요" required>
-          </dd>
-        </div>
-
-        <div class="form-row">
-          <dt>
-            <label for="wr_email">
-              이메일 주소 <span class="required_text">*</span>
-            </label>
-          </dt>
-          <dd>
-            <input type="email" id="wr_email" name="wr_email" placeholder="이메일 주소를 입력하세요" required>
-            <p class="help-text">
-              접수하신 내용에 대해 별도 안내가 필요한 경우 해당 이메일로 회신드립니다.
+    <nav>
+        <h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
+        <ul>
+            <li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
+            <li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
+            <li><a href="/Login/2. 로그인_회원가입 화면/login_join_main.html">LOGIN</a></li>
+        </ul>
+    </nav>
+    <div class="contact-header">
+        <h2 class="contact-title">Contact</h2>
+        <hr class="contact-divider">
+    </div>
+    <div class="contact-wrapper">
+        <!-- 왼쪽 안내 문구 -->
+        
+        <div class="contact-left">
+            <p>
+                궁금하신 사항을 문의해주세요<br>
+                소통은 언제나 환영합니다</p>
             </p>
-          </dd>
         </div>
 
-        <div class="form-row">
-          <dt>
-            <label for="wr_content">
-              문의 내용
-            </label>
-          </dt>
-          <dd>
-            <textarea id="wr_content" name="wr_content" rows="5" placeholder="내용을 입력하세요"></textarea>
-          </dd>
+        <div class="form-container">
+            <form action="/contact/submit" method="post">
+                <table class="contact-table">
+                    <tr>
+                        <th><label for="wr_name">이름 <span class="required">*</span></label></th>
+                        <td><input type="text" id="wr_name" name="wr_name" placeholder="이름을 입력하세요" required></td>
+                    </tr>
+                    <tr>
+                        <th><label for="wr_email">이메일 주소 <span class="required">*</span></label></th>
+                        <td>
+                            <input type="email" id="wr_email" name="wr_email" placeholder="이메일 주소를 입력하세요" required>
+                            <p class="help-text">접수하신 내용에 대해 별도 안내가 필요한 경우 해당 이메일로 회신드립니다.</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th><label for="wr_content">문의내용</label></th>
+                        <td><textarea id="wr_content" name="wr_content" placeholder="내용을 입력하세요"></textarea></td>
+                    </tr>
+                    <tr>
+                        <th>개인정보 처리방침 <span class="required">*</span></th>
+                        <td>
+                            <label>
+                                <input type="checkbox" required>
+                                <a href="#" target="_blank">개인정보 처리방침</a>에 동의합니다.
+                            </label>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2" class="submit-cell">
+                            <button type="submit">전송하기</button>
+                        </td>
+                    </tr>
+                </table>
+            </form>
         </div>
 
-        <div class="form-row">
-          <dt>
-            <label for="wr_agree">
-              개인정보 처리방침 <span class="required_text">*</span>
-            </label>
-          </dt>
-          <dd>
-            <input type="checkbox" id="wr_agree" name="wr_agree" required>
-            <label for="wr_agree">
-              <a href="#" target="_blank">개인정보 처리방침</a>에 동의합니다.
-            </label>
-          </dd>
-        </div>
-      </dl>
-
-      <button type="submit">전송하기</button>
-    </form>
-  </div>
 </body>
 
 </html>
