자기소개서 추가, 일부 내용 수정

--- a/Login/1. 첫 화면/first_main.html
+++ b/Login/1. 첫 화면/first_main.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Project</title>
+	<title>Init</title>
 
 	<link rel="stylesheet" href="first_style.css">
 </head>
