--- a/Login/3.About us/about_main.html
+++ b/Login/3.About us/about_main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Init</title>
 
     <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
     <link rel="stylesheet" href="about_style.css">
@@ -23,7 +23,7 @@
     <section class="about-top">
         <div class="about-overlay">
             <div class="slogan-left">
-                <h1 class="slogan">Init,<br> 우리들의 커리어 시작</h1>
+                <h1 class="slogan">Init<br> 우리들의 커리어 시작</h1>
             </div>
             <div class="slogan-right">
                 <div class="slogan-sub">
