--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header-inner">
         <div class="logo-box">
-          <span class="logo"><a href="/Mypage/Mypage.html" class="logo">Init.</a></span>
+          <span class="logo"><a href="/Mypage/Mypage.html" class="logo">Init</a></span>
         </div>
         <div class="navbar-right">
           <button class="alarm-button">🔔</button>
@@ -46,7 +46,7 @@
         <span>이력서 관리</span>
       </div>
     </a>
-    <a href="/junyoung/101010 copy.html" class="menu-item">
+    <a href="/Itroduce_page/Intro_page.html" class="menu-item">
       <div>
         <div class="emoji">✍️</div>
         <span>자기소개서</span>
