--- a/Login/4.Contact/contact_main.html
+++ b/Login/4.Contact/contact_main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Init</title>
 
     <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
     <link rel="stylesheet" href="contact_style.css">
