--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -17,14 +17,14 @@
 
                 <!-- 왼쪽: 로고 -->
                 <div class="logo-box">
-                    <a href="/Mypage/Mypage.html" class="logo">Init.</a>
+                    <a href="/Mypage/Mypage.html" class="logo">Init</a>
                 </div>
 
                 <!-- 가운데: 메뉴 -->
                 <nav class="nav-menu">
                     <a href="/MypageMain/Mypage_main.html" class="nav-item">Mypage</a>
                     <a href="/Resume/resume.html" class="nav-item">이력서</a>
-                    <a href="/junyoung/101010 copy.html" class="nav-item">자기소개서</a>
+                    <a href="/Itroduce_page/Intro_page.html" class="nav-item">자기소개서</a>
                     <a href="/calendar/calendar.html" class="nav-item">공고 캘린더</a>
                     <a href="/dong/board.html" class="nav-item">커뮤니티</a>
                 </nav>
