--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -7,10 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="/Mypage/style.css">
     <link rel="stylesheet" href="/Resume/resume.css">
+    <link rel="stylesheet" href="/Mypage/style.css">
 </head>
 
 <body>
-    <!-- 헤더 부분 (원래 네가 쓰던 거 그대로 넣으면 됨) -->
+    <!-- 헤더 부분 -->
     <header class="header">
         <div class="container">
             <div class="header-inner">
@@ -112,9 +113,8 @@
 
         <br>
         <hr>
-
+        <!-- -------------------------- 여기 위에 부분 만들거야 ----------------------------------------------- -->
         <!-- 추가적인 이력서 부분 -->
-
         <div class="resume-card" style="background-color: #fff;">
             <div class="resume-header">
 
@@ -153,47 +153,7 @@
             </div>
         </div>
 
-        <br>
-        <hr>
-        <br>
-
-        <div class="resume-card" style="background-color: #fff;">
-            <div class="resume-header">
-
-                <span class="updated">2025.04.30 15:43 수정</span>
-            </div>
-
-            <h2 class="resume-title">기본 이력서</h2>
-
-            <div class="resume-info">
-                <div class="info-row">
-                    <!-- <span class="icon">💼</span> -->
-                    <span id="career">신입</span>
-                </div>
-                <div class="info-row">
-                    <!-- <span class="icon">🛠️</span> -->
-                    <span id="job">IT개발·데이터</span>
-                </div>
-
-                <div class="info-row">
-                    <!-- <span class="icon">💰</span> -->
-                    <span id="salary">회사내규에 따름</span>
-                </div>
-                <div class="info-row">
-                    <!-- <span class="icon">📍</span> -->
-                    <span id="region">경기 이천시</span>
-                </div>
-            </div>
-
-
-            <div class="resume-footer">
-                <span class="update-hint">🔄 오늘 날짜로 업데이트</span>
-                <div class="button-group">
-                    <button class="edit-btn">수정하기</button>
-                    <button class="copy-btn">복사하기</button>
-                </div>
-            </div>
-        </div>
+        
 
 
 
