이모지>이미지수정

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -23,8 +23,8 @@
           <span class="logo"><a href="/Mypage/Mypage.html" class="logo">Init</a></span>
         </div>
         <div class="navbar-right">
-          <button class="alarm-button">🔔</button>
-          <button class="logout-button">👤</button>
+          <button class="alarm-button"><img src="/Mypage/myimage/알림.png" style="width: 30px; height: 32px;"></button>
+          <button class="logout-button"><img src="/Mypage/myimage/사람.svg" style="width: 30px; height: 32px;"></button>
         </div>
       </div>
     </div>
@@ -35,32 +35,32 @@
   <div class="menu-bar">
     <a href="/MypageMain/Mypage_main.html" class="menu-item">
       <div>
-        <div class="emoji">🧑‍💻</div>
+        <div class="emoji"><img src="/Mypage/myimage/사람.png" style="width: 40px; height: 40px;"></div>
         <span>MyPage</span>
       </div>
     </a>
 
     <a href="/Resume/resume.html" class="menu-item">
       <div>
-        <div class="emoji">📄</div>
+        <div class="emoji"><img src="/Mypage/myimage/resume.png" style="width: 40px; height: 40px;"></div>
         <span>이력서 관리</span>
       </div>
     </a>
     <a href="/Itroduce_page/Intro_page.html" class="menu-item">
       <div>
-        <div class="emoji">✍️</div>
+        <div class="emoji"><img src="/Mypage/myimage/자소서2.png" style="width: 40px; height: 40px;"></div>
         <span>자기소개서</span>
       </div>
     </a>
     <a href="/calendar/calendar.html" class="menu-item">
       <div>
-        <div class="emoji">🗓️</div>
+        <div class="emoji"><img src="/Mypage/myimage/캘린더.png" style="width: 40px; height: 40px;"></div>
         <span>공고 캘린더</span>
       </div>
     </a>
     <a class="menu-item" href="/dong/board.html">
       <div>
-        <div class="emoji">💬</div>
+        <div class="emoji"><img src="/Mypage/myimage/커뮤니티2.png" style="width: 40px; height: 40px;"></div>
         <span>커뮤니티</span>
       </div>
     </a>
@@ -85,7 +85,8 @@
             <span class="match-status">매칭</span>
           </div>
           <p class="sub-info">신입 ｜ oo대학교</p>
-          <button class="edit-btn1"><a href="#" style="text-decoration-line: none;">✏️</a></button>
+          <button class="edit-btn1"><a href="#" style="text-decoration-line: none;">
+            <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;"></a></button>
         </div>
       </div>
 
@@ -111,7 +112,9 @@
             <span>-</span>
           </div>
         </div>
-        <button class="edit-btn"><a href="#" style="text-decoration-line: none;">✏️</a></button>
+        <button class="edit-btn"><a href="#" style="text-decoration-line: none;">
+          <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+        </a></button>
       </div>
     </div>
     <!-- 개인 프로필 메인 끝 -->
@@ -290,7 +293,7 @@
           <button class="cancel-btn">취소</button>
           <button class="save-btn">저장</button>
         </div>
-
+        
       </div>
     </div>
   </div>
@@ -305,7 +308,7 @@
 
         <div class="profile-image-section">
           <div class="profile-image-wrapper">
-            <img src="/Mypage/myimage/default-profile.png" alt="프로필 이미지" />
+            <img src="/Mypage/myimage/프로필1.png" alt="프로필 이미지" />
             <button class="camera-icon">📷</button>
           </div>
         </div>
