--- a/MypageMain/Mypage_main.html
+++ b/MypageMain/Mypage_main.html
@@ -37,8 +37,10 @@
 
                 <!-- 오른쪽: 알림/유저 -->
                 <div class="navbar-right">
-                    <button class="alarm-button">🔔</button>
-                    <button class="logout-button">👤</button>
+                    <button class="alarm-button"><img src="/Mypage/myimage/알림.png"
+                            style="width: 30px; height: 32px;"></button>
+                    <button class="logout-button"><img src="/Mypage/myimage/사람.svg"
+                            style="width: 30px; height: 32px;"></button>
                 </div>
 
             </div>
@@ -79,22 +81,32 @@
                     <div><strong>박건도</strong> <span class="required">필수</span></div>
                     <div>2000.09.08 ｜ 010-9590-9918 ｜ nagundo@naver.com</div>
                 </div>
-                <button class="edit-button" data-target="#userInfoPanel">✏️</button> <!-- 추가!! -->
+                <button class="edit-button" data-target="#userInfoPanel">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button> <!-- 추가!! -->
             </div>
         </div>
 
         <!-- 셀프 브랜딩 -->
         <div class="profile-section">
-            <div class="section-title">👤 셀프 브랜딩 <span class="required">필수</span>
-                <button class="edit-button" data-target="#selfBrandingPanel">✏️</button> <!-- 추가!! -->
+            <div class="section-title">
+                <img src="/Mypage/myimage/사람.svg" alt="프로필 이미지" />
+                셀프 브랜딩 <span class="required">필수</span>
+                <button class="edit-button" data-target="#selfBrandingPanel">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button> <!-- 추가!! -->
             </div>
             <div class="section-sub">간단한 문장과 사진으로 나를 소개하세요.</div>
         </div>
 
         <!-- 학력 -->
         <div class="profile-section">
-            <div class="section-title">🎓 학력 <span class="required">필수</span>
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/학력.png" alt="프로필 이미지" style="width: 25px; height: 25px;" />
+                학력 <span class="required">필수</span>
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">학력정보를 적어주세요.</div>
             <div class="experience-item">
@@ -106,32 +118,48 @@
 
         <!-- 경력 -->
         <div class="profile-section">
-            <div class="section-title">💼 경력
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/경력.png" alt="프로필 이미지" style="width: 25px; height: 25px;" />
+                경력
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">직장, 인턴십, 아르바이트 등의 업무 경험을 적어주세요.</div>
         </div>
 
         <!-- 프로젝트 -->
         <div class="profile-section">
-            <div class="section-title">📁 프로젝트
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/프로젝트.png" alt="프로젝트" style="width: 20px; height: 20px;" />
+                 프로젝트
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">참여했던 개인/팀 프로젝트를 적어주세요.</div>
         </div>
 
         <!-- 지식/기술 -->
         <div class="profile-section">
-            <div class="section-title">🛠️ 지식 · 기술
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/지식기술.png" alt="지식기술" style="width: 20px; height: 20px;" /> 
+                지식 · 기술
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">자격증, 공인 어학시험, 툴, 개발스택 등을 적어주세요.</div>
         </div>
 
         <!-- 경험 -->
         <div class="profile-section">
-            <div class="section-title">📌 경험
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/경험.png" alt="경험" style="width: 20px; height: 20px;" />  
+                경험
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">대내외 활동, 해외 경험, 봉사 경험 등을 적어주세요.</div>
             <div class="experience-item">
@@ -145,24 +173,36 @@
 
         <!-- 수상내역 -->
         <div class="profile-section">
-            <div class="section-title">💎 수상내역
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/수상.png" alt="수상내역" style="width: 20px; height: 20px;" /> 
+                수상내역
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">수상명, 수상연도 등을 적어주세요.</div>
         </div>
 
         <!-- 병역 및 우대 -->
         <div class="profile-section">
-            <div class="section-title">🪖 병역 · 취업 우대
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/병역.png" alt="병역" style="width: 20px; height: 20px;" /> 
+                병역 · 취업 우대
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">병역, 취업 우대사항을 적어주세요.</div>
         </div>
 
         <!-- 첨부자료 -->
         <div class="profile-section">
-            <div class="section-title">📎 첨부자료
-                <button class="edit-button">✏️</button>
+            <div class="section-title">
+                <img src="/Mypage/myimage/링크.png" alt="링크" style="width: 20px; height: 20px;" /> 
+                첨부자료
+                <button class="edit-button">
+                    <img src="/Mypage/myimage/편집.png" style="width: 30px; height: 30px;">
+                </button>
             </div>
             <div class="section-sub">포트폴리오, 경력기술서, URL 등을 첨부해주세요.</div>
         </div>
