--- a/dong/board.html
+++ b/dong/board.html
@@ -32,8 +32,10 @@
 
 					<!-- 오른쪽: 알림/유저 -->
 					<div class="navbar-right">
-						<button class="alarm-button">🔔</button>
-						<button class="logout-button">👤</button>
+						<button class="alarm-button"><img src="/Mypage/myimage/알림.png"
+                            style="width: 30px; height: 32px;"></button>
+                    <button class="logout-button"><img src="/Mypage/myimage/사람.svg"
+                            style="width: 30px; height: 32px;"></button>
 					</div>
 
 				</div>
