이미지수정

--- a/Mypage/Mypage.html
+++ b/Mypage/Mypage.html
@@ -48,7 +48,7 @@
     </a>
     <a href="/Itroduce_page/Intro_page.html" class="menu-item">
       <div>
-        <div class="emoji"><img src="/Mypage/myimage/자소서2.png" style="width: 40px; height: 40px;"></div>
+        <div class="emoji"><img src="/Mypage/myimage/자기소개.png" style="width: 40px; height: 40px;"></div>
         <span>자기소개서</span>
       </div>
     </a>
@@ -60,7 +60,7 @@
     </a>
     <a class="menu-item" href="/dong/board.html">
       <div>
-        <div class="emoji"><img src="/Mypage/myimage/커뮤니티2.png" style="width: 40px; height: 40px;"></div>
+        <div class="emoji"><img src="/Mypage/myimage/커뮤니티.png" style="width: 40px; height: 40px;"></div>
         <span>커뮤니티</span>
       </div>
     </a>
@@ -366,18 +366,18 @@
           <div class="apply-info-list">지원 정보가 없어요</div>
           <button class="apply-add-btn">+ 회사 추가</button>
         </div>
-        <div class="apply-status-item" data-status="지원 완료">
-          <div class="apply-count-box">지원 완료 <span class="count">0</span></div>
+        <div class="apply-status-item" data-status="서류 합격">
+          <div class="apply-count-box">서류 합격 <span class="count">0</span></div>
           <div class="apply-info-list">지원 정보가 없어요</div>
           <button class="apply-add-btn">+ 회사 추가</button>
         </div>
-        <div class="apply-status-item" data-status="지원 완료">
-          <div class="apply-count-box">지원 완료 <span class="count">0</span></div>
+        <div class="apply-status-item" data-status="최종 합격 ">
+          <div class="apply-count-box">최종 합격 <span class="count">0</span></div>
           <div class="apply-info-list">지원 정보가 없어요</div>
           <button class="apply-add-btn">+ 회사 추가</button>
         </div>
-        <div class="apply-status-item" data-status="지원 완료">
-          <div class="apply-count-box">지원 완료 <span class="count">0</span></div>
+        <div class="apply-status-item" data-status="불합격">
+          <div class="apply-count-box">불합격 <span class="count">0</span></div>
           <div class="apply-info-list">지원 정보가 없어요</div>
           <button class="apply-add-btn">+ 회사 추가</button>
         </div>
