--- a/Login/1. 첫 화면/first_main.html
+++ b/Login/1. 첫 화면/first_main.html
@@ -24,7 +24,7 @@
 			<div class="overlay">
 				<h2>이력서 관리</h2>
 				<p>나의 정보 및 경력 사항을 정리하여<br>간편하게 이력서를 관리할 수 있는 곳</p>
-				<img src="/Login/images/11.png">
+				<img src="/Login/images/11.career.jpg">
 			</div>
 		</div>
 		<div class="panel">
@@ -33,7 +33,7 @@
 				<h2>자소서 관리</h2>
 				<br>
 				<p>내가 지원한 자기소개서를 모아두고<br>한 번에 관리할 수 있는 곳</p>
-				<img src="/Login/images/12.png">
+				<img src="/Login/images/12.resume.jpg">
 			</div>
 		</div>
 		<div class="panel">
@@ -42,7 +42,7 @@
 				<h2>스케줄 관리</h2>
 				<br>
 				<p>공고 날짜, 면접 날짜 등을 등록하여<br>한 눈에 알아볼 수 있는 곳 </p>
-				<img src="/Login/images/13.png">
+				<img src="/Login/images/13.calendar.jpg">
 			</div>
 		</div>
 		<div class="panel">
@@ -51,7 +51,7 @@
 				<h2>커뮤니티</h2>
 				<br>
 				<p>자소서 첨삭, 면접 팁 등 커리어 관련<br>또는 업무 관련 정보 등을 나눌 수 있는<br>소통이 가능한 곳</p>
-				<img src="/Login/images/14.png">
+				<img src="/Login/images/14.commu.jpg">
 			</div>
 		</div>
 		<div class="panel last-panel">
