--- a/Login/4.Contact/contact_main.html
+++ b/Login/4.Contact/contact_main.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Init</title>
 
+    <link rel="stylesheet" href="/Mypage/style.css">
     <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
     <link rel="stylesheet" href="contact_style.css">
 </head>
 
-<body>
+<body class="contact-main">
     <nav>
         <h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
         <ul>
@@ -25,7 +26,7 @@
     </div>
     <div class="contact-wrapper">
         <!-- 왼쪽 안내 문구 -->
-        
+
         <div class="contact-left">
             <p>
                 궁금하신 사항을 문의해주세요<br>
@@ -68,7 +69,15 @@
                 </table>
             </form>
         </div>
+    </div>
 
+    <footer class="main-footer">
+        <div class="footer-container">
+            <div class="footer-logo">Init</div>
+            <p>© 2025 이름추천받음. All rights reserved.</p>
+            <p>문의: gundo9918@gmail.com</p>
+        </div>
+    </footer>
 </body>
 
 </html>
