--- a/Login/2. 로그인_회원가입 화면/login_join_main.html
+++ b/Login/2. 로그인_회원가입 화면/login_join_main.html
@@ -13,8 +13,7 @@
         <div class="card" id="card">
             <!-- 로그인 화면 (앞면) -->
             <div class="side front">
-                <a href="/Login/1. 첫 화면/first_main.html"><img src="/Login/images/logo.png" alt="logo"
-                        class="logo" /></a>
+                <a href="/Login/1. 첫 화면/first_main.html" class="logo">Init</a>
                 <!-- ID 필드 -->
                 <div class="form-floating">
                     <input type="text" id="loginId" class="form-control" placeholder=" " required />
