--- a/Login/3.About us/about_main.html
+++ b/Login/3.About us/about_main.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Init</title>
 
+    <link rel="stylesheet" href="/Mypage/style.css">
     <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
     <link rel="stylesheet" href="about_style.css">
 </head>
@@ -43,52 +44,60 @@
         <h2>우리가 추구하는 방향</h2>
         <div class="features dir-feature">
             <div class="feature-box">
-                <img src="/Login/images/background.jpg" alt="이력서 관리" class="feature-bg">
-                <div class="feature-content">
+                <img src="/Login/images/img0.png" alt="이력서 관리" class="feature-bg1">
+                <div class="feature-content-1">
                     <h3>누구나 쉽게<br>시작할 수 있도록</h3>
                 </div>
             </div>
             <div class="feature-box">
-                <img src="/Login/images/background.jpg" alt="자소서 작성" class="feature-bg">
-                <div class="feature-content">
+                <img src="/Login/images/img0.png" alt="자소서 작성" class="feature-bg1">
+                <div class="feature-content-1">
                     <h3>직관적으로 한 눈에<br>볼 수 있도록</h3>
                 </div>
             </div>
             <div class="feature-box">
-                <img src="/Login/images/background.jpg" alt="지원 일정 관리" class="feature-bg">
-                <div class="feature-content">
+                <img src="/Login/images/img0.png" alt="지원 일정 관리" class="feature-bg1">
+                <div class="feature-content-1">
                     <h3>제한없이 자유롭게<br>사용할 수 있도록</h3>
                 </div>
             </div>
         </div>
 
         <div class="divider"></div>
-        
+
         <h2>우리들의 기능</h2>
         <div class="features func-feature">
             <div class="feature-box">
-                <img src="/Login/images/11.png" alt="이력서 관리" class="feature-bg">
-                <div class="feature-content">
+                <img src="/Login/images/11.career.jpg" alt="이력서 관리" class="feature-bg2">
+                <div class="feature-content-2">
                     <h3>이력서 관리</h3><br>
                     <p>깔끔한 양식으로 된 폼에 이력서를<br>작성하고 내보낼 수 있으며<br>간편하게 내용도 추가도 해보세요.</p>
                 </div>
             </div>
             <div class="feature-box">
-                <img src="/Login/images/12.png" alt="자소서 작성" class="feature-bg">
-                <div class="feature-content">
+                <img src="/Login/images/12.resume.jpg" alt="자소서 작성" class="feature-bg2">
+                <div class="feature-content-2">
                     <h3>자소서 작성</h3><br>
                     <p>가이드에 따라 효율적으로<br>자소서를 완성하고 이전 기록들을 보며<br>더 좋은 방향으로 디벨롭 해보세요.</p>
                 </div>
             </div>
             <div class="feature-box">
-                <img src="/Login/images/13.png" alt="지원 일정 관리" class="feature-bg">
-                <div class="feature-content">
+                <img src="/Login/images/13.calendar.jpg" alt="지원 일정 관리" class="feature-bg2">
+                <div class="feature-content-2">
                     <h3>지원 일정 관리</h3><br>
                     <p>내가 지원한 회사들의 일정을<br>한 눈에 확인하고 중요한 공고 내용을<br>놓치지 마세요.</p>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer class="main-footer">
+        <div class="footer-container">
+            <div class="footer-logo">Init</div>
+            <p>© 2025 이름추천받음. All rights reserved.</p>
+            <p>문의: gundo9918@gmail.com</p>
+        </div>
+    </footer>
 </body>
 
 </html>
