사진 삭제 및 수정

--- a/Login/3.About us/about_main.html
+++ b/Login/3.About us/about_main.html
@@ -44,19 +44,19 @@
         <h2>우리가 추구하는 방향</h2>
         <div class="features dir-feature">
             <div class="feature-box">
-                <img src="/Login/images/img0.png" alt="이력서 관리" class="feature-bg1">
+                <img src="/Login/images/0img.png" alt="이력서 관리" class="feature-bg1">
                 <div class="feature-content-1">
                     <h3>누구나 쉽게<br>시작할 수 있도록</h3>
                 </div>
             </div>
             <div class="feature-box">
-                <img src="/Login/images/img0.png" alt="자소서 작성" class="feature-bg1">
+                <img src="/Login/images/0img.png" alt="자소서 작성" class="feature-bg1">
                 <div class="feature-content-1">
                     <h3>직관적으로 한 눈에<br>볼 수 있도록</h3>
                 </div>
             </div>
             <div class="feature-box">
-                <img src="/Login/images/img0.png" alt="지원 일정 관리" class="feature-bg1">
+                <img src="/Login/images/0img.png" alt="지원 일정 관리" class="feature-bg1">
                 <div class="feature-content-1">
                     <h3>제한없이 자유롭게<br>사용할 수 있도록</h3>
                 </div>
