로그인 링크 변경

--- a/Login/2. 로그인_회원가입 화면/login_join_main.html
+++ b/Login/2. 로그인_회원가입 화면/login_join_main.html
@@ -30,7 +30,7 @@
                     <input type="checkbox" id="remember" />
                     <label for="remember">아이디 저장</label>
                 </div>
-                <button class="btn">로그인</button>
+                <button class="btn"><a href="/Mypage/Mypage.html">로그인</a></button>
                 <div class="social-login-row">
                     <button class="social-btn">
                         <img src="/Login/images/icon/naver.png" alt="Naver" />
