--- a/Login/4.Contact/contact_main.html
+++ b/Login/4.Contact/contact_main.html
@@ -7,13 +7,13 @@
     <title>Init</title>
 
     <link rel="stylesheet" href="/Mypage/style.css">
-    <link rel="stylesheet" href="/Login/1. 첫 화면/first_style.css">
+    <link rel="stylesheet" href="/Login/firstpage/first_style.css">
     <link rel="stylesheet" href="contact_style.css">
 </head>
 
 <body class="contact-main">
     <nav>
-        <h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
+        <h1><a href="/Login/firstpage/first_main.html">Init</a></h1>
         <ul>
             <li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
             <li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
