--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>InitWeb - 메인으로 이동 중...</title>
-  <meta http-equiv="refresh" content="0; url=./Login/1.%20첫화면/first_main.html" />
+  <meta http-equiv="refresh" content="0; url=./Login/firstpage/first_main.html" />
 </head>
 <body>
-  <p>페이지로 이동 중입니다... <a href="./Login/1.첫화면/first_main.html">직접 이동</a></p>
+  <p>페이지로 이동 중입니다... <a href="./Login/firstpage/first_main.html">직접 이동</a></p>
 </body>
 </html>
