폴더 명 수정

--- a/Login/3.About us/about_main.html
+++ b/Login/3.About us/about_main.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
             <li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
-            <li><a href="/Login/2. 로그인_회원가입 화면/login_join_main.html">LOGIN</a></li>
+            <li><a href="/Login/login_join/login_join_main.html">LOGIN</a></li>
         </ul>
     </nav>
 
