--- a/panel/└┌░▌┴⌡.html
+++ b/panel/└┌░▌┴⌡.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>지식 · 기술</title>
-  <link rel="stylesheet" href="/패널모음/panel.css">
+  <link rel="stylesheet" href="/panel/panel.css">
 </head>
 
 <body>
