--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Calendar</title>
-    <link rel="stylesheet" href="/Mypage/style.css">
-    <link rel="stylesheet" href="/calendar/Calendar.css">
+    <link rel="stylesheet" href="/team-project/Mypage/style.css">
+    <link rel="stylesheet" href="/team-project/calendar/Calendar.css">
     <!-- fullcalendar 5버전 -->
     <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet" />
 </head>
@@ -19,23 +19,23 @@
 
                 <!-- 왼쪽: 로고 -->
                 <div class="logo-box">
-                    <a href="/Mypage/Mypage.html" class="logo">Init</a>
+                    <a href="/team-project/Mypage/Mypage.html" class="logo">Init</a>
                 </div>
 
                 <!-- 가운데: 메뉴 -->
                 <nav class="nav-menu">
-                    <a href="/MypageMain/Mypage_main.html" class="nav-item">Mypage</a>
-                    <a href="/Resume/resume.html" class="nav-item">이력서</a>
-                    <a href="/Itroduce_page/Intro_page.html" class="nav-item">자기소개서</a>
-                    <a href="/calendar/calendar.html" class="nav-item">공고 캘린더</a>
-                    <a href="/dong/board.html" class="nav-item">커뮤니티</a>
+                    <a href="/team-project/MypageMain/Mypage_main.html" class="nav-item">Mypage</a>
+                    <a href="/team-project/Resume/resume.html" class="nav-item">이력서</a>
+                    <a href="/team-project/Itroduce_page/Intro_page.html" class="nav-item">자기소개서</a>
+                    <a href="/team-project/calendar/calendar.html" class="nav-item">공고 캘린더</a>
+                    <a href="/team-project/dong/board.html" class="nav-item">커뮤니티</a>
                 </nav>
 
                 <!-- 오른쪽: 알림/유저 -->
                 <div class="navbar-right">
-                    <button class="alarm-button"><img src="/Mypage/myimage/알림.png"
+                    <button class="alarm-button"><img src="/team-project/Mypage/myimage/알림.png"
                             style="width: 30px; height: 32px;"></button>
-                    <button class="logout-button"><img src="/Mypage/myimage/사람.svg"
+                    <button class="logout-button"><img src="/team-project/Mypage/myimage/사람.svg"
                             style="width: 30px; height: 32px;"></button>
                 </div>
 
@@ -81,7 +81,7 @@
 
     <!-- fullcalendar 스크립트 -->
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
-    <script src="/Mypage/logout.js"></script>
+    <script src="/team-project/Mypage/logout.js"></script>
     <script>
         var calendar;
 
