폴더 이름 수정

--- a/Login/4.Contact/contact_main.html
+++ b/Login/4.Contact/contact_main.html
@@ -7,7 +7,7 @@
     <title>Init</title>
 
     <link rel="stylesheet" href="/Mypage/style.css">
-    <link rel="stylesheet" href="/Login/firstpage/first_style.css">
+    <link rel="stylesheet" href="/Login/1.first_page/first_main.html">
     <link rel="stylesheet" href="contact_style.css">
 </head>
 
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
             <li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
-            <li><a href="/Login/login_join/login_join_main.html">LOGIN</a></li>
+            <li><a href="/Login/2.login_join/login_join_main.html">LOGIN</a></li>
         </ul>
     </nav>
     <div class="contact-header">
