--- a/Login/1.First_Main/first_main.html
+++ b/Login/1.First_Main/first_main.html
@@ -10,11 +10,11 @@
 
 <body>
 	<nav>
-		<h1><a href="/Login/1. 첫 화면/first_main.html">Init</a></h1>
+		<h1><a href="/Login/1.First_Main/first_main.html">Init</a></h1>
 		<ul>
 			<li><a href="/Login/3.About us/about_main.html">ABOUT US</a></li>
 			<li><a href="/Login/4.Contact/contact_main.html">CONTACT</a></li>
-			<li><a href="/Login/2. 로그인_회원가입 화면/login_join_main.html">LOGIN</a></li>
+			<li><a href="/Login/2.Login_Join/login_join_main.html">LOGIN</a></li>
 		</ul>
 	</nav>
 
