--- a/dong/write.html
+++ b/dong/write.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시글 작성</title>
-    <link rel="stylesheet" href="/team-project/css/board.css">
-    <link rel="stylesheet" href="/team-project/css/header.css">
+    <link rel="stylesheet" href="css/board.css">
+    <link rel="stylesheet" href="css/header.css">
     <!-- <link rel="stylesheet" href="/Mypage/style.css"> -->
 </head>
 <body>
